[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ryanseipp/rask"
repository = "https://github.com/ryanseipp/rask"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "src/rask-liburing-sys",
    "src/rask-liburing",
    "src/rask-core",
    "src/rask-web",
    "src/rask-proxy"
]

[workspace.dependencies]
libc = "0.2.148"
slab = "0.4.8"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false

[profile.dev]
debug = true
opt-level = 0
