[package]
name = "liburing"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liburing-sys = { path = "../liburing-sys" }
libc = { workspace = true }
bitflags = "2.3.3"
