[package]
name = "rask-core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Core types and utilities for rask-proxy and rask-web"

[dependencies]
slab = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rask-liburing = { version = "2.4.0", path = "../rask-liburing" }
