[package]
name = "rask-liburing"
version = "2.4.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Idiomatic Rust wrapper around rask-liburing-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rask-liburing-sys = { version = "2.4.0", path = "../rask-liburing-sys" }
libc = { workspace = true }
bitflags = "2.3.3"
